--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -55,7 +55,7 @@ body {
     width: 6.75rem;
     height: 2.3125rem;
     margin-right: 3.25rem;
-    background: no-repeat 50% 50% url(./assets/logo.svg);
+    background: no-repeat 50% 50% url(./images/logo.svg);
     background-size: contain;
 }
 
@@ -65,7 +65,7 @@ body {
     height: 100%;
     margin: 0 0 0 auto;
     padding: 0;
-    background: 50% 50% no-repeat transparent url(./assets/icon_list_m@1x.svg);
+    background: 50% 50% no-repeat transparent url(./images/icon_list_m@1x.svg);
     border: none;
     border-radius: 0;
     appearance: none;
@@ -225,7 +225,7 @@ body {
     font-family: inherit;
     font-weight: bold;
     background: no-repeat calc(100% - 1rem) 50% #ffd93e
-        url(./assets/arrow-down.svg);
+        url(./images/arrow-down.svg);
     appearance: none;
 }
 
@@ -277,7 +277,7 @@ body {
     display: flex;
     gap: 0.9375rem;
     height: 20.6875rem;
-    background: no-repeat 50% 50% url(./assets/bg@2x.png);
+    background: no-repeat 50% 50% url(./images/bg@2x.png);
     /*background-size: cover;*/
     background-size: 1260px;
     border-radius: 1.25rem;
@@ -393,7 +393,7 @@ body {
 }
 
 .hero-dashboard__icon_rain {
-    background-image: url(./assets/cloud-drizzle.svg);
+    background-image: url(./images/cloud-drizzle.svg);
 }
 
 .hero-dashboard__schedule {
@@ -461,23 +461,23 @@ body {
 }
 
 .event__icon_temp {
-    background-image: url(./assets/icon_temperature.svg);
+    background-image: url(./images/icon_temperature.svg);
 }
 
 .event__icon_temp2 {
-    background-image: url(./assets/icon_temperature_2.svg);
+    background-image: url(./images/icon_temperature_2.svg);
 }
 
 .event__icon_light {
-    background-image: url(./assets/icon_sun.svg);
+    background-image: url(./images/icon_sun.svg);
 }
 
 .event__icon_light2 {
-    background-image: url(./assets/icon_sun_2.svg);
+    background-image: url(./images/icon_sun_2.svg);
 }
 
 .event__icon_schedule {
-    background-image: url(./assets/icon_scheduled.svg);
+    background-image: url(./images/icon_scheduled.svg);
 }
 
 .event__title {
@@ -546,7 +546,7 @@ body {
     right: 0;
     width: 18px;
     bottom: 10px;
-    background: no-repeat 50% 50% url(././assets/arrow-left.png);
+    background: no-repeat 50% 50% url(././images/arrow-left.png);
     transform: rotate(180deg);
     cursor: pointer;
 }
