--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -546,7 +546,7 @@ body {
     right: 0;
     width: 18px;
     bottom: 10px;
-    background: no-repeat 50% 50% url(././images/arrow-left.png);
+    background: no-repeat 50% 50% url(./images/arrow-left.png);
     transform: rotate(180deg);
     cursor: pointer;
 }
